# WinResource-MonitorTool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MonitorTool.sln  PRD.md  README.md  _b.bat  build_all.bat  test_netspeed.cpp
.claude/: settings.json
cmake/: patch_timestamp.ps1
doc/: PRD.md
include/core/: NetSpeedMonitor.h  ProcessMonitor.h  SystemMonitor.h
include/ui/: HelpDialog.h  MainWindow.h
include/utils/: DataBuffer.h  DataLogger.h  DataModels.h  ExcelExporter.h  HtmlChartExporter.h  build_timestamp.h
res/: MonitorTool.manifest  monitor.rc  resource.h
src/: ConfigManager.cpp  ConfigManager.h  DataBuffer.cpp  DataBuffer.h  DataModels.h  ExcelExporter.cpp  ExcelExporter.h  MainWindow.cpp  MainWindow.h  NetSpeedMonitor.cpp  NetSpeedMonitor.h  ProcessMonitor.cpp  ProcessMonitor.h  SystemMonitor.cpp  SystemMonitor.h  main.cpp  resource.h
src/core/: NetSpeedMonitor.cpp  ProcessMonitor.cpp  SystemMonitor.cpp
src/ui/: HelpDialog.cpp  MainWindow.cpp
src/utils/: ConfigManager.cpp  DataBuffer.cpp  DataLogger.cpp  ExcelExporter.cpp  HtmlChartExporter.cpp
